--- a/monte_carlo/pom.xml
+++ b/monte_carlo/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.monte_carlo</groupId>
+  <groupId>monte_carlo.src.main.java.com.monte_carlo.App</groupId>
   <artifactId>monte_carlo</artifactId>
   <version>MINOR</version>
 
@@ -24,6 +24,12 @@
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+
   </dependencies>
 
   <build>
