--- a/monte_carlo/pom.xml
+++ b/monte_carlo/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>monte_carlo.src.main.java.com.monte_carlo</groupId>
+  <groupId>com.monte_carlo</groupId>
   <artifactId>monte_carlo</artifactId>
   <version>MAJOR</version>
 
@@ -51,7 +51,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>monte_carlo.src.main.java.com.monte_carlo.App</mainClass>
+              <mainClass>com.monte_carlo.App</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
