--- a/monte_carlo/pom.xml
+++ b/monte_carlo/pom.xml
@@ -29,6 +29,16 @@
       <artifactId>json</artifactId>
       <version>20230618</version>
     </dependency>
+    <dependency>
+      <groupId>jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.0</version>
+    </dependency>
 
 
   </dependencies>
