--- a/monte_carlo/pom.xml
+++ b/monte_carlo/pom.xml
@@ -39,6 +39,11 @@
       <artifactId>junit-jupiter</artifactId>
       <version>5.10.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-testng</artifactId>
+      <version>0.5.0</version>
+    </dependency>
 
 
   </dependencies>
